Added the sbt logger